--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,8 @@ script:
 - export RAILS_ENV=test
 - bundle exec rake db:create db:schema:load db:test:prepare
 - bundle exec rake cucumber
-- bundle exec rspec
+- bundle exec rspec --color --format documentation --require spec_helper --require rails_helper
+
 deploy:
   provider: heroku
   api_key:
