--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,9 @@ capybara-*.html
 **.orig
 rerun.txt
 pickle-email-*.html
+/Guardfile
+/.rubocop.yml
+/.travis.yml
 
 # Comment out these rules if you are OK with secrets being uploaded to the repo
 # config/initializers/secret_token.rb
