--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ script:
 - export RAILS_ENV=test
 - bundle exec rake db:create db:schema:load db:test:prepare
 - bundle exec rake cucumber
-- bundle exec rspec --color --format documentation --require rails_helper
+- bundle exec rspec --color --format documentation
 deploy:
   provider: heroku
   api_key:
@@ -11,3 +11,6 @@ deploy:
   app: deeprog
   on:
     repo: deeprog/goalify
+addons:
+    code_climate:
+        repo_token: 088402be444ff5c274ba18d212dfe8ea518fba07ad7c768c00feb1f1aecf9b8a
